css fix, home page readme visible again

--- a/www/app/webroot/css/app.layout.css
+++ b/www/app/webroot/css/app.layout.css
@@ -89,6 +89,9 @@ html, body, #container {
 #content {
 	min-height: 100%;
 }
+#content {
+	overflow: hidden;
+}
 #footer {
 	padding-top: 1em;
 	padding-bottom: 3em;
